--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -11,12 +11,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- Font Awesome -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+          rel="stylesheet" />
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+          rel="stylesheet" />
+    <!-- MDB -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/4.0.0/mdb.min.css"
+          rel="stylesheet" />
 </head>
 
 
 
 <body>
-
     <header>
 
         <!--Test Navbar-->
@@ -30,7 +38,7 @@
                     IP Hotel
                 </a>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex justify-content-center mx-auto">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex justify-content-center ">
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
@@ -48,16 +56,13 @@
                                 <li><a class="dropdown-item" href="#">Something else here</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link disabled">Disabled</a>
-                        </li>
                         <li class="nav-item d-flex justify-content-center mx-auto" style="text-align:center;">
                             <img src="~/Content/images/phone-call.png"
                                  alt=""
                                  width="20"
                                  height="20"
-                                 style="text-align:center;"/>
-                            
+                                 style="text-align:center;" />
+
                         </li>
                     </ul>
                     <form class="d-flex">
@@ -67,32 +72,82 @@
                 </div>
             </div>
         </nav>
+        <!--Test Navbar-->
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6">
 
-        <!-- Background image -->
-        <div class="text-center bg-image"
-             style="
-      background-image: url('https://mdbcdn.b-cdn.net/img/new/slides/041.webp');
-      height: 400px;
-    ">
-            <div class="mask" style="background-color: rgba(0, 0, 0, 0.6); height: 400px;">
-                <div class="d-flex justify-content-center align-items-center h-100">
-                    <div class="text-white">
-                        <h1 class="mb-3">Heading</h1>
-                        <h4 class="mb-3">Subheading</h4>
-                        <a class="btn btn-outline-light btn-lg" href="#!" role="button">Call to action</a>
-                    </div>
                 </div>
             </div>
         </div>
-        <!-- Background image -->
+
+    </header>
+
+            <!-- Carousel wrapper -->
+            <div id="carouselDarkVariant" class="carousel slide carousel-fade carousel-dark h-75 d-inline-block" data-mdb-ride="carousel">
+                <!-- Indicators -->
+                <div class="carousel-indicators">
+                    <button data-mdb-target="#carouselDarkVariant"
+                            data-mdb-slide-to="0"
+                            class="active"
+                            aria-current="true"
+                            aria-label="Slide 1"></button>
+                    <button data-mdb-target="#carouselDarkVariant"
+                            data-mdb-slide-to="1"
+                            aria-label="Slide 1"></button>
+                    <button data-mdb-target="#carouselDarkVariant"
+                            data-mdb-slide-to="2"
+                            aria-label="Slide 1"></button>
+                </div>
+
+                <!-- Inner -->
+                <div class="carousel-inner">
+                    <!-- Single item -->
+                    <div class="carousel-item active">
+                        <img src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(19).webp" class="d-block w-100" alt="Motorbike Smoke" />
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>First slide label</h5>
+                            <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                        </div>
+                    </div>
+
+                    <!-- Single item -->
+                    <div class="carousel-item">
+                        <img src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(35).webp" class="d-block w-100" alt="Mountaintop" />
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Second slide label</h5>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        </div>
+                    </div>
+
+                    <!-- Single item -->
+                    <div class="carousel-item">
+                        <img src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(40).webp" class="d-block w-100" alt="Woman Reading a Book" />
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Third slide label</h5>
+                            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Inner -->
+                <!-- Controls -->
+                <button class="carousel-control-prev" type="button" data-mdb-target="#carouselDarkVariant" data-mdb-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-mdb-target="#carouselDarkVariant" data-mdb-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+            <!-- Carousel wrapper -->
+
+    
+
         <!-- Navbar -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-white d-flex justify-content-evenly">
-            <div class="container ">
+        <nav class="navbar navbar-expand-lg navbar-light bg-white d-flex justify-content-center">
+                    <ul class="navbar-nav mx-auto mb-2 mb-lg-0 h-50 " style="height:30px;">
 
-                <div class="navbar mx-auto d-sm-none d-md-block" id="navbarExample01">
-
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="height:30px;">
-                      
                         <li class="nav-item-active">
                             <a class="navbar-brand" href="#">
                                 <img src="~/Content/emblem.png"
@@ -132,14 +187,14 @@
                             </a>
                         </li>
                     </ul>
-                </div>
-            </div>
         </nav>
         <!-- Navbar -->
-    </header>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
- 
+    
 
+
+    <script type="text/javascript"
+            src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/4.0.0/mdb.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 
 </html>
