--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,208 +1,224 @@
-﻿@{
-    Layout = null;
-}
+﻿<!--Test Navbar-->
+@{/* <nav class="navbar navbar-expand-lg navbar-light bg-light" style="height: 40px;">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <img src="~/Content/emblem.png"
+                     alt=""
+                     width="40"
+                     height="40" />
+                IP Hotel
+            </a>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex justify-content-center ">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Ana Sayfa</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Giriş Yap</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Hakkımızda</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">İletişim</a>
+                    </li>
 
-@{
-    /*<li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
-        </a>
-        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-        </ul>
-    </li> */
-}
+                </ul>
 
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <!-- Font Awesome -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-          rel="stylesheet" />
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
-          rel="stylesheet" />
-    <!-- MDB -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/4.0.0/mdb.min.css"
-          rel="stylesheet" />
-</head>
-
-
-
-<body>
-    <header>
-
-        <!--Test Navbar-->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light" style="height: 40px;">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">
-                    <img src="~/Content/emblem.png"
-                         alt=""
-                         width="40"
-                         height="40" />
-                    IP Hotel
-                </a>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex justify-content-center ">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Ana Sayfa</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Giriş Yap</a>
-                        </li>
-
-                        <li class="nav-item d-flex justify-content-center mx-auto" style="text-align:center;">
-                            <img src="~/Content/images/phone-call.png"
-                                 alt=""
-                                 width="20"
-                                 height="20"
-                                 style="text-align:center;" />
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-        <!--Test Navbar-->
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6">
-
-                </div>
+                <img src="~/Content/images/phone-call.png"
+                     alt=""
+                     width="20"
+                     height="20"
+                     style="text-align:center; margin-right: 10px;" />
+                <span class="navbar-text" style="margin-right:10px;">
+                    (212) IP-ROYAL 4125
+                </span>
+                <img src="~/Content/images/email.png"
+                     alt=""
+                     width="20"
+                     height="20"
+                     style="text-align: center; margin-right: 10px;" />
+                <span class="navbar-text" style="margin-right:10px;">
+                    ip-royal-iletisim@iproyalhotel.com
+                </span>
             </div>
         </div>
+    </nav>
+    <!--Test Navbar-->
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6">
 
-    </header>
-
-    <div class="row my-2">
-        <div class="col-md-8 mx-auto">
-            <!-- Carousel wrapper -->
-            <div id="carouselDarkVariant" class="carousel slide carousel-fade carousel-dark" data-mdb-ride="carousel">
-                <!-- Indicators -->
-                <div class="carousel-indicators">
-                    <button data-mdb-target="#carouselDarkVariant"
-                            data-mdb-slide-to="0"
-                            class="active"
-                            aria-current="true"
-                            aria-label="Slide 1"></button>
-                    <button data-mdb-target="#carouselDarkVariant"
-                            data-mdb-slide-to="1"
-                            aria-label="Slide 1"></button>
-                    <button data-mdb-target="#carouselDarkVariant"
-                            data-mdb-slide-to="2"
-                            aria-label="Slide 1"></button>
-                </div>
-
-                <!-- Inner -->
-                <div class="carousel-inner 300-px-wide">
-                    <!-- Single item -->
-                    <div class="carousel-item active">
-                        <img src="~/Content/images/hotel1.jpg" class="d-block w-100 h-75" alt="Motorbike Smoke" style="align-content:center; justify-content:center;" />
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5 style="color:aliceblue;">IP Royal Hotel</h5>
-                            <p style="color:aliceblue;">Dünyanın en itibarlı, 5 yıldızlı hotelleri.</p>
-                        </div>
-                    </div>
-
-                    <!-- Single item -->
-                    <div class="carousel-item">
-                        <img src="~/Content/images/lasvegas.jpg" class="d-block w-100 h-75" alt="Mountaintop" />
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5 style="color:aliceblue;">IP Royal Hotel</h5>
-                            <p style="color:aliceblue;">Sizin için dünyanın dört bir yanından derlenmiş en konforlu konaklama durakları.</p>
-                        </div>
-                    </div>
-
-                    <!-- Single item -->
-                    <div class="carousel-item">
-                        <img src="~/Content/images/hotel3.jpg" class="d-block w-100 h-75" alt="Woman Reading a Book" />
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5 style="color:aliceblue;">IP Royal Hotel</h5>
-                            <p style="color:aliceblue;">Ödüllü ilk 10 hotel sitesinin arasında.</p>
-                        </div>
-                    </div>
-                </div>
-                <!-- Inner -->
-                <!-- Controls -->
-                <button class="carousel-control-prev" type="button" data-mdb-target="#carouselDarkVariant" data-mdb-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-mdb-target="#carouselDarkVariant" data-mdb-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
             </div>
-            <!-- Carousel wrapper -->
         </div>
     </div>
+*/}
 
 
+<div class="row my-2">
+    <div class="col-md-8 mx-auto">
+        <!-- Carousel wrapper -->
+        <div id="carouselDarkVariant" class="carousel slide carousel-fade carousel-dark" data-mdb-ride="carousel">
+            <!-- Indicators -->
+            <div class="carousel-indicators">
+                <button data-mdb-target="#carouselDarkVariant"
+                        data-mdb-slide-to="0"
+                        class="active"
+                        aria-current="true"
+                        aria-label="Slide 1"></button>
+                <button data-mdb-target="#carouselDarkVariant"
+                        data-mdb-slide-to="1"
+                        aria-label="Slide 1"></button>
+                <button data-mdb-target="#carouselDarkVariant"
+                        data-mdb-slide-to="2"
+                        aria-label="Slide 1"></button>
+            </div>
 
+            <!-- Inner -->
+            <div class="carousel-inner 300-px-wide">
+                <!-- Single item -->
+                <div class="carousel-item active">
+                    <img src="~/Content/images/hotel1.jpg" class="d-block w-100 h-75" alt="Motorbike Smoke" style="align-content:center; justify-content:center;" />
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5 style="color:aliceblue;">IP Royal Hotel</h5>
+                        <p style="color:aliceblue;">Dünyanın en itibarlı, 5 yıldızlı hotelleri.</p>
+                    </div>
+                </div>
 
+                <!-- Single item -->
+                <div class="carousel-item">
+                    <img src="~/Content/images/lasvegas.jpg" class="d-block w-100 h-75" alt="Mountaintop" />
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5 style="color:aliceblue;">IP Royal Hotel</h5>
+                        <p style="color:aliceblue;">Sizin için dünyanın dört bir yanından derlenmiş en konforlu konaklama durakları.</p>
+                    </div>
+                </div>
 
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-white d-flex justify-content-center">
-        <ul class="navbar-nav mx-auto mb-2 mb-lg-0 h-50 " style="height:30px;">
+                <!-- Single item -->
+                <div class="carousel-item">
+                    <img src="~/Content/images/hotel3.jpg" class="d-block w-100 h-75" alt="Woman Reading a Book" />
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5 style="color:aliceblue;">IP Royal Hotel</h5>
+                        <p style="color:aliceblue;">Ödüllü ilk 10 hotel sitesinin arasında.</p>
+                    </div>
+                </div>
+            </div>
+            <!-- Inner -->
+            <!-- Controls -->
+            <button class="carousel-control-prev" type="button" data-mdb-target="#carouselDarkVariant" data-mdb-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-mdb-target="#carouselDarkVariant" data-mdb-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+        <!-- Carousel wrapper -->
+    </div>
+</div>
 
-            <li class="nav-item-active">
-                <a class="navbar-brand" href="#">
-                    <img src="~/Content/emblem.png"
-                         alt=""
-                         width="40"
-                         height="40" />
-                </a>
-            </li>
-            <li class="nav-item active">
-                <a class="nav-link" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Dropdown link
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <li><a class="dropdown-item" href="#">Action</a></li>
-                    <li><a class="dropdown-item" href="#">Another action</a></li>
-                    <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-            </li>
-            <li class="nav-item-active">
-                <a class="navbar-brand" href="#">
-                    <img src="~/Content/emblem.png"
-                         alt=""
-                         width="40"
-                         height="40" />
-                </a>
-            </li>
-        </ul>
-    </nav>
-    <!-- Navbar -->
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg navbar-light bg-white d-flex justify-content-center">
+    <ul class="navbar-nav mx-auto mb-2 mb-lg-0 h-50 " style="height:30px;">
 
+        <li class="nav-item-active">
+            <a class="navbar-brand" href="#">
+                <img src="~/Content/emblem.png"
+                     alt=""
+                     width="40"
+                     height="40" />
+            </a>
+        </li>
+        <li class="nav-item active">
+            <a class="nav-link" aria-current="page" href="#">Ana Sayfa</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Rezervasyon</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Fiyatlar</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Hakkımızda</a>
+        </li>
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Dropdown link
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+            </ul>
+        </li>
+        <li class="nav-item-active">
+            <a class="navbar-brand" href="#">
+                <img src="~/Content/emblem.png"
+                     alt=""
+                     width="40"
+                     height="40" />
+            </a>
+        </li>
+    </ul>
+</nav>
+<!-- Navbar -->
 
-
-    <script type="text/javascript"
-            src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/4.0.0/mdb.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-</body>
-
-</html>
+<div class="container my-5">
+    <h1 class="display-4 mb-5 d-flex justify-content-center" style="align-self:center;">Hızlı Rezervasyon</h1>
+    <div class="row">
+            <div class="col-3">
+                <div class="card">
+                    <img class="card-img-top" src="~/Content/homeScreen/suit.jpg" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Suit Odalar</h5>
+                        <p class="card-text">Geniş ve ferah, her şey dahil hizmetin dahil olduğu suit odalarımız; özel müşterilerini bekliyor.</p>
+                        <a href="#" class="btn btn-primary">Rezervasyon</a>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-muted">Last updated 3 mins ago</small>
+                    </div>
+                </div>
+            </div>
+            <div class="col-3">
+                <div class="card">
+                    <img class="card-img-top" src="~/Content/homeScreen/normal.jpg" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Orta Boy Oda</h5>
+                        <p class="card-text">Ortalama bouylarda, üst düzey hizmet alabileceğiniz konforlu odalarımız. İki kişiliğe kadar çıkabilmektedir.</p>
+                        <a href="#" class="btn btn-primary">Rezervasyon</a>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-muted">Last updated 3 mins ago</small>
+                    </div>
+                </div>
+            </div>
+            <div class="col-3">
+                <div class="card">
+                    <img class="card-img-top" src="~/Content/homeScreen/ekonomi-aile.jpg" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Ekonomi Aile Odaları</h5>
+                        <p class="card-text">Ailenizle birlikte huzur içinde kalabileceğiniz, geniş ve konforlu odalarımız. Ailelere özel hizmetlerimiz bulunmaktadır.</p>
+                        <a href="#" class="btn btn-primary">Rezervasyon</a>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-muted">Last updated 3 mins ago</small>
+                    </div>
+                </div>
+            </div>
+            <div class="col-3">
+                <div class="card">
+                    <img class="card-img-top" src="~/Content/homeScreen/tek-kisi.jpg" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Tek Kişilik Odalar</h5>
+                        <p class="card-text">Tek kişilik odalarımız, standart tek kişilik oda boyutlarının ötesinde olup kaliteden ödün vermeyen hizmetiyle sizlerin hizmetindedir.</p>
+                        <a href="#" class="btn btn-primary">Rezervasyon</a>
+                    </div>
+                    
+                    <div class="card-footer">
+                        <small class="text-muted">Last updated 3 mins ago</small>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
