Oda and Odeme tables are added. Working as expected. Didn't changed views tho.

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
         <!--Test Navbar-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light" style="height: 40px;">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="@Url.Action("", "Home/Index")">
                     <img src="~/Content/emblem.png"
                          alt=""
                          width="40"
