--- a/Views/Tbl_Oda/Index.cshtml
+++ b/Views/Tbl_Oda/Index.cshtml
@@ -4,42 +4,50 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<div class="container">
+    <div class="row ">
+        <div class="col my-5 d-flex mx-auto">
+            <h1 class="display-2 d-flex mx-auto">Rezervasyon</h1>
+        </div>
+    </div>
+</div>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.OdaTip)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.OdaKisiLimit)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.OdaGenislik)
-        </th>
-        <th></th>
-    </tr>
+<div class="col-md-6 mx-auto">
+    <div class="table-responsive">
+        <table class="table table-bordered table-hover table-striped">
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.OdaTip)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.OdaKisiLimit)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.OdaGenislik)
+                </th>
+                <th></th>
+            </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.OdaTip)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.OdaKisiLimit)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.OdaGenislik)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.OdaID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.OdaID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.OdaID })
-        </td>
-    </tr>
-}
+            @foreach (var item in Model)
+            {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.OdaTip)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.OdaKisiLimit)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.OdaGenislik)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.OdaID }) |
+                @Html.ActionLink("Details", "Details", new { id = item.OdaID }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.OdaID })
+            </td>
+        </tr>
+            }
 
-</table>
+        </table>
+    </div>
+</div>
