Changed the table of Oda.

--- a/Views/Tbl_Oda/Index.cshtml
+++ b/Views/Tbl_Oda/Index.cshtml
@@ -3,7 +3,50 @@
 @{
     ViewBag.Title = "Index";
 }
+@{/*
 
+
+    <div class="col-md-6 mx-auto">
+        <div class="table-responsive">
+            <table class="table table-bordered table-hover table-striped">
+                <tr>
+                    <th>
+                        @Html.DisplayNameFor(model => model.OdaTip)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.OdaKisiLimit)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.OdaGenislik)
+                    </th>
+                    <th></th>
+                </tr>
+
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.OdaTip)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.OdaKisiLimit)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.OdaGenislik)
+                        </td>
+                        <td>
+                            @Html.ActionLink("Edit", "Edit", new { id = item.OdaID }) |
+                            @Html.ActionLink("Details", "Details", new { id = item.OdaID }) |
+                            @Html.ActionLink("Delete", "Delete", new { id = item.OdaID })
+                        </td>
+                    </tr>
+                }
+
+            </table>
+        </div>
+    </div>
+*/
+}
 <div class="container">
     <div class="row ">
         <div class="col my-5 d-flex mx-auto">
@@ -12,42 +55,47 @@
     </div>
 </div>
 
-<div class="col-md-6 mx-auto">
-    <div class="table-responsive">
-        <table class="table table-bordered table-hover table-striped">
-            <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.OdaTip)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.OdaKisiLimit)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.OdaGenislik)
-                </th>
-                <th></th>
-            </tr>
-
-            @foreach (var item in Model)
-            {
+<table class="table align-middle mb-0 bg-white table-hover table-striped">
+    <thead class="bg-light">
         <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.OdaTip)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.OdaKisiLimit)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.OdaGenislik)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.OdaID }) |
-                @Html.ActionLink("Details", "Details", new { id = item.OdaID }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.OdaID })
-            </td>
+            <th>Oda Tipi</th>
+            <th>Odanın Kişi Limiti</th>
+            <th>Odanın Durumu</th>
+            <th>Odanın Genişliği</th>
+            <th>Rezervasyon</th>
         </tr>
-            }
-
-        </table>
-    </div>
-</div>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+            var a = Html.DisplayFor(modelItem => item.OdaTip);
+            ViewBag.strnk = "~/Content/oda/" + a.ToString() + ".jpg";
+            <tr>
+                <td>
+                    <div class="d-flex align-items-center">
+                        <img src='@Url.Content(ViewBag.strnk)'
+                             alt=""
+                             style="width: 45px; height: 45px"
+                             class="rounded-circle" />
+                        <div class="ms-3">
+                            <p class="fw-bold mb-1">@Html.DisplayFor(modelItem => item.OdaTip)</p>
+                            <p class="text-muted mb-0">IP Royal Hotel</p>
+                        </div>
+                    </div>
+                </td>
+                <td>
+                    <p class="fw-normal mb-1 mx-auto">@Html.DisplayFor(modelItem => item.OdaKisiLimit)</p>
+                </td>
+                <td>
+                    <span class="badge badge-success rounded-pill d-inline">Müsait</span>
+                </td>
+                <td>@Html.DisplayFor(modelItem => item.OdaGenislik)</td>
+                <td>
+                    <button type="button" class="btn btn-link btn-sm btn-rounded">
+                        Rezervasyon
+                    </button>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
