AdminDashBoard is added.

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
                     IP Hotel
                 </a>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex justify-content-center ">
+                    <ul class="navbar-nav me-auto mb-lg-0 d-flex justify-content-center ">
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="@Url.Action("", "Home/Index")">Ana Sayfa</a>
                         </li>
