--- a/Views/Tbl_Odeme/Index.cshtml
+++ b/Views/Tbl_Odeme/Index.cshtml
@@ -7,6 +7,12 @@
     <div class="row ">
         <div class="col my-5 d-flex mx-auto">
             <h1 class="display-2 d-flex mx-auto">Rezervasyon</h1>
+            @Html.ActionLink("Yeni Rezervasyon Oluştur", "Create")
+        </div>
+    </div>
+    <div class="row ">
+        <div class="col d-flex mx-auto">
+            @Html.ActionLink("Yeni Rezervasyon Oluştur", "Create")
         </div>
     </div>
 </div>
@@ -47,7 +53,6 @@
                     </td>
                 </tr>
             }
-
         </table>
     </div>
 </div>
